src/objects/c2g__codaIncomeScheduleDefinition__c.object
<CustomObject>
    <customHelpPage>c2g__codahelpincomescheduledefinition</customHelpPage>
    <description>Predefined templates that can be used as a basis for an income schedule on a sales invoice.</description>
    <fields>
        <fullName>c2g__GeneralLedgerAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>General Ledger Account</label>
        <referenceTo>c2g__codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Income Schedule Definitions</relationshipLabel>
        <relationshipName>IncomeScheduleDefinitions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__NumberofJournals__c</fullName>
        <defaultValue>12</defaultValue>
        <label>Number of Journals</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__PeriodInterval__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Period Interval</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__UnitOfWork__c</fullName>
        <label>Unit of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__Usepartperiods__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Use Part Periods</label>
        <type>Checkbox</type>
    </fields>
    <label>Income Schedule Definition</label>
    <listViews>
        <fullName>c2g__All</fullName>
        <columns>NAME</columns>
        <columns>c2g__NumberofJournals__c</columns>
        <columns>c2g__PeriodInterval__c</columns>
        <columns>c2g__Usepartperiods__c</columns>
        <columns>c2g__GeneralLedgerAccount__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Income Schedule Definitions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>